--- a/2019/Feb/2月_意志恢复训练月.md
+++ b/2019/Feb/2月_意志恢复训练月.md
@@ -1,8 +1,9 @@
-##本月目标：加强自制力
+## 本月目标：加强自制力
 
-临渊羡鱼不如退而结网
-坚持不懈龟速终亦可达
-须知尽小者大,积微者著;千里之堤溃于蚁穴，勿忘杜渐二字
+*临渊羡鱼不如退而结网
+*坚持不懈龟速终亦可达
+*须知尽小者大,积微者著
+*千里之堤溃于蚁穴，勿忘杜渐二字
 
 ## links
    * [深目录的访问](<git配合MD文件的笔记显示.md>)
