--- a/2019/2019.md
+++ b/2019/2019.md
@@ -1,4 +1,5 @@
 2019年，2月18日，在闲来公司的工位上敲下这一行字，祝福今年的自己，加油！
 
 ## links
-   * [2月_意志恢复训练](<Feb/2月_意志恢复训练月.md>)
+* [首页](<../preface.md>)
+  * [2月_意志恢复训练](<Feb/2月_意志恢复训练月.md>)
