--- a/2019/Feb/2月_意志恢复训练月.md
+++ b/2019/Feb/2月_意志恢复训练月.md
@@ -6,4 +6,6 @@
 * 千里之堤溃于蚁穴，勿忘杜渐二字
 
 ## links
-   * [深目录的访问](<git配合MD文件的笔记显示.md>)
+* [首页](<../../preface.md>)
+* [2019](<../2019.md>)
+  * 下一篇:[深目录的访问测试](<git配合MD文件的笔记显示.md>)
